--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -477,3 +477,59 @@ $$L_\text{vlb} = E_{t \sim p_t}\left[\frac{L_t}{p_t}\right]$$
 ## 42. Denosing Diffusion Implicit Models ([link](https://arxiv.org/abs/2010.02502))
 
 See [here](https://minibatchai.com/diffusion/generative-models/text2image/sampling/2022/07/14/Diffusion_Sampling.html)
+
+## 43.
+
+Page-by-page notes
+
+### Abstract and Introduction
+
+#### Page 1
+- Solely based on RL without data, guidance or domain knowledge beyond rules
+- Precise and sophisticated lookahead needed for a game like Go
+
+#### Page 2
+- AlphaGo Fan, which defeated European champion Fan Hui, had a policy neural network trained to predict expert moves and a value neural net trainer to predict winners of games that policy netword played against itself 
+- Trained nets combined with MCTS to provide lookahead search using policy net to narrow search to high probability moves and value net along with MC rollouts to evaluate tree positions
+- This was followed by a similar model Alpha Go Lee which defeated Lee Sedol
+- AlphaGo Zero different as follows
+    1. Trained solely by self-play RL, starting with random moves
+    2. Only black and white stones as input features
+    3. Single net not policy and value
+    4. Simpler tree search without MC rollouts
+- Achieves via RL algorithm that incorporates lookahead search inside training loop - result is rapid improvement and precise and stable learning
+
+### 1. Reinforcement Learning in AlphaGo Zero
+
+#### Page 3 (last paragraph continues into Page 5)
+- Neural net $f_\theta$ takes as input a raw board representation of the position $s$ and its history and outputs $(\mathbf{p}, v)$ where $p_a = \mathrm{Pr}(a|s)$.
+- In each position MCTS is executed with the help of the net and outputs new probabilities $\boldsymbol{\pi}$ for playing each move.
+- $\boldsymbol{\pi}$ tends to result in much stronger moves than the raw probabilities $\mathbf{p}$.
+- Can see MCTS as a *policy improvement* operator.
+- Self-play with search - using $\boldsymbol{\pi}$ to make the move and using winner $z$ as sample of the value can be seen as *policy evaluation* operator.
+- Main idea of RL algorithm is to use these search operators repeatedly in *policy iteration* whereby neural net parameters are updated to make $(\mathbf{p}, v)$ closely match $(\boldsymbol{\pi}, z)$.
+- The improved parameters are then used in the next iteration to make the search even stronger. 
+- MCTS details:
+    - Each search tree edge $(s, a)$ stores prior probability $P(s, a)$, visit count $N(s, a)$, action value $Q(s, a)$.
+    - Simulation begins from the root state, iteratively selects moves that maximise upper confidence bound $Q(s, a) + U(s, a)$ where $U(s, a) \propto P(s, a) / (1 + N(s, a))$ until leaf node encountered.
+    - Leaf node expanded and evaluated only once by net to generate both the prior probabilities and evaluation $(P(s', .), V(s')) = f_\theta(s')$.
+    - Updates
+    
+    $$N(s, a) \leftarrow N(s, a) + 1 \\
+    Q(s, a) = 1/N(s, a) \sum_{s' | s, a \rightarrow s'} V(s')$$
+
+    - $s, a \rightarrow s'$ means simulation eventually reached $s'$ after it took move $a$ from position $s$.
+
+    #### Page 4 / Figure 1: **Self-play reinforcement learning in AlphaGo Zero**
+
+    ![Figure 1 from the paper]({{site.baseurl}}/assets/images/alpha-go-fig1.png)
+
+    
+    To be continued.
+
+
+
+
+
+
+
