--- a/_posts/2023-04-13-2-qubit.md
+++ b/_posts/2023-04-13-2-qubit.md
@@ -160,6 +160,8 @@ Since the circuit applies V when qubit 0 is 1 and identity when qubit 0 is 0, it
 
 To use this for trace estimation you simply need to apply a Hadamard transform to qubit 0 at the input and output.
 
+A notebook that verifies the circuit using matrices can be found [here](https://colab.research.google.com/drive/1Tn7j8gH_PReIkDUIL6byJjkzun0mcXU4?usp=sharing).
+
 ## Alternate Controlled-$H$ Construction
 
 You can construct `CH` using a combination of a `CNOT` and rotations since
