--- a/_posts/2023-04-13-2-qubit.md
+++ b/_posts/2023-04-13-2-qubit.md
@@ -29,7 +29,7 @@ which can be expressed as `[H(0), CU(0, 1), H(0)]`
 It can easily be shown that the approach works for arbitrary values of $n$. The assignment problem asks you to implement the circuit for a 2 qubit circuit `V = [U(0), CNOT(0, 1), U(1), CNOT(1, 0)]`
 
 <p class='p-img' markdown=1>
-![Circuit for V]({{site.baseurl}}/assets/CV-3qubit.png)
+![Circuit for V]({{site.baseurl}}/assets/V_unitary.png)
 </p>
 Note that:
 - Numbering for qubits increases from bottom to top.
@@ -56,7 +56,7 @@ I & 0 \\
 I & 0 \\
 0 & U_n \end{bmatrix}$$
 
-In this case `V = CNOT(2, 1) x U(2) x CNOT(1, 2) x U(1)` (gates are applied from right to left in the list so the matrix multiplication goes left to right), where U is an arbitrary unitary matrix.
+In this case `V = CNOT(2, 1) x U(2) x CNOT(1, 2) x U(1)` (since gates are applied from left to right in the list, matrix multiplication goes right to left), where U is an arbitrary unitary matrix.
 
 
 
@@ -108,35 +108,38 @@ Couldn't execute jailed code: stdout: b'', stderr: b'' with status code: -24
 
 It is suggested [here](https://groups.google.com/g/openedx-ops/c/xokwJaqdRgE) that a timeout might possibly be the reason.
 
-## Alternative Circuit without Toffoli
-
 This got me thinking whether the overall `V` could be realised without having to rely on a Toffoli gate. Turns out that it can. 
 
+## Alternative Circuit without Toffoli
 I first thought about what happens when you simply substitute `U` with `CU`. The resulting circuit is
 
 ```
 [CU(0, 1), CNOT(1, 2), CU(0, 2), CNOT(2, 1)] 
 ```
 
-When qubit 0 is 1, the result is `[U(1), CNOT(1, 2), CU(2), CNOT(2, 1)] = V` but when qubit 0 is 0, it is `[CNOT(1, 2), CNOT(2, 1)]` which is not the identity. 
+When qubit 0 is 1, the result is `[U(1), CNOT(1, 2), U(2), CNOT(2, 1)] = V` but when qubit 0 is 0, it is `[CNOT(1, 2), CNOT(2, 1)]` which is not the identity. 
 
 Now `CNOT(x, y)` is its own inverse and there are two `CNOT` gates in this circuit but as it stands they don't cancel since the control and target qubits are different in each case. But what if you could make it so that when qubit 0 is 0, `CNOT(1, 2)` is applied both times?
 
 ## CNOT and Hadamard Transform Property
-
 `CNOT` has a special property that when you apply a [Hadamard](https://en.wikipedia.org/wiki/Hadamard_transform#Quantum_computing_applications) transform to the inputs and outputs of `CNOT(x, y)`, the result is `CNOT(y, x)` i.e. the control and target qubits are flipped
 
 ![Diagram showing how CNOT can be flipped by applying Hadamard transform to the inputs and outputs]({{site.baseurl}}/assets/cnot_hadamard.png)
 
 <small>Source: [Wikipedia](https://en.wikipedia.org/wiki/Controlled_NOT_gate#/media/File:CNOT_Hadamard_Basis.svg), created by DavidBoden ([CC BY-SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/))</small>
 
-Let assume that we have access to a controlled-Hadamard gate `CH`. (This was the case for the assignment but see [below](#alternate-controlled-h-construction) for how you can construct one using Pauli matrices and rotations). If we now substitute controlled versions of the Hadamard gates, then CNOT will only get flipped when qubit 0 is 1. Therefore when qubit 0 is 0 it will invert the other CNOT.
+The ability to flip CNOT using only single qubit gates is key to the solution. Because as we have seen, it suffices to control the order of qubits input to the CNOT gate and not whether the CNOT gate is applied. 
+
+Now assume we have access to controlled-Hadamard gates (as was the case in the assignment but see [below](#alternate-controlled-h-construction) for how you can construct one using Pauli matrices and rotations). If we construct the second CNOT gate `CNOT(2,1)` using `CNOT(1,2)` and the controlled versions of H, then `CNOT(1, 2)` will only get flipped when qubit 0 is 1. Therefore when qubit 0 is 0 it will invert the other `CNOT(1, 2)`.
 
 ## A 2-qubit Controlled-$V$ Circuit
 
 The circuit for controlled-V is as follows:
 
-`CV = [CU(0, 1), CNOT(1, 2), CU(0, 2), CH(0, 1), CH(0, 2), CNOT(1, 2), CH(0, 2), CH(0, 1)]`
+```
+CV = [CU(0, 1), CNOT(1, 2), CU(0, 2), 
+      CH(0, 1), CH(0, 2), CNOT(1, 2), CH(0, 2), CH(0, 1)]
+```
 
 <p class='p-img' markdown=1>
 ![Circuit for 2-qubit controlled-V]({{site.baseurl}}/assets/CV-2qubit.png)
