DONE: added 3 papers

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -478,58 +478,89 @@ $$L_\text{vlb} = E_{t \sim p_t}\left[\frac{L_t}{p_t}\right]$$
 
 See [here](https://minibatchai.com/diffusion/generative-models/text2image/sampling/2022/07/14/Diffusion_Sampling.html)
 
-## 43.
 
-Page-by-page notes
+## 43. GPT-4 Technical Report ([link](https://arxiv.org/abs/2303.08774))
 
-### Abstract and Introduction
+### Science vs Engineering
 
-#### Page 1
-- Solely based on RL without data, guidance or domain knowledge beyond rules
-- Precise and sophisticated lookahead needed for a game like Go
+ChatGPT represents in my opinion the triumph of engineering over science. This has been true in many instances in history. The industrial revolution was well underway before thermodynamics was fully understood. By the time Maxwell published his equations that form the foundation of classical electromagnetism the electric telegraph had already enabled instantaneous long-distance communication. 
 
-#### Page 2
-- AlphaGo Fan, which defeated European champion Fan Hui, had a policy neural network trained to predict expert moves and a value neural net trainer to predict winners of games that policy netword played against itself 
-- Trained nets combined with MCTS to provide lookahead search using policy net to narrow search to high probability moves and value net along with MC rollouts to evaluate tree positions
-- This was followed by a similar model Alpha Go Lee which defeated Lee Sedol
-- AlphaGo Zero different as follows
-    1. Trained solely by self-play RL, starting with random moves
-    2. Only black and white stones as input features
-    3. Single net not policy and value
-    4. Simpler tree search without MC rollouts
-- Achieves via RL algorithm that incorporates lookahead search inside training loop - result is rapid improvement and precise and stable learning
+For over half a century people have been theorising about AI and have proved all kinds of things for toy problems and toy datasets. Each time, we have been told, these developments would pave the way for real-world applications. The difference with the likes of ChatGPT  is they have been trained directly with real-world data. You could almost say that it has learned in the manner of an engineer rather than a scientist.  
 
-### 1. Reinforcement Learning in AlphaGo Zero
+The predictability of the behaviour of models is very interesting. It shows that we can simulate machine learning models as we can other the behaviour of other machines. This is where science is starting to enter the picture. At the point where we know how to make something work, science helps to cast this in a more reliable replicable fashion. 
 
-#### Page 3 (last paragraph continues into Page 5)
-- Neural net $f_\theta$ takes as input a raw board representation of the position $s$ and its history and outputs $(\mathbf{p}, v)$ where $p_a = \mathrm{Pr}(a|s)$.
-- In each position MCTS is executed with the help of the net and outputs new probabilities $\boldsymbol{\pi}$ for playing each move.
-- $\boldsymbol{\pi}$ tends to result in much stronger moves than the raw probabilities $\mathbf{p}$.
-- Can see MCTS as a *policy improvement* operator.
-- Self-play with search - using $\boldsymbol{\pi}$ to make the move and using winner $z$ as sample of the value can be seen as *policy evaluation* operator.
-- Main idea of RL algorithm is to use these search operators repeatedly in *policy iteration* whereby neural net parameters are updated to make $(\mathbf{p}, v)$ closely match $(\boldsymbol{\pi}, z)$.
-- The improved parameters are then used in the next iteration to make the search even stronger. 
-- MCTS details:
-    - Each search tree edge $(s, a)$ stores prior probability $P(s, a)$, visit count $N(s, a)$, action value $Q(s, a)$.
-    - Simulation begins from the root state, iteratively selects moves that maximise upper confidence bound $Q(s, a) + U(s, a)$ where $U(s, a) \propto P(s, a) / (1 + N(s, a))$ until leaf node encountered.
-    - Leaf node expanded and evaluated only once by net to generate both the prior probabilities and evaluation $(P(s', .), V(s')) = f_\theta(s')$.
-    - Updates
-    
-    $$N(s, a) \leftarrow N(s, a) + 1 \\
-    Q(s, a) = 1/N(s, a) \sum_{s' | s, a \rightarrow s'} V(s')$$
+### Exam results
 
-    - $s, a \rightarrow s'$ means simulation eventually reached $s'$ after it took move $a$ from position $s$.
+GPT-4's exam performance is interesting. It achieved top scores in most humanities subjects and biology, which is not too surprising. There was considerable improvement in calculus. However, there was little improvement and very low scores for English Language and Literature, which one would think would be easy for the model to ace.
 
-    #### Page 4 / Figure 1: **Self-play reinforcement learning in AlphaGo Zero**
+### Law
 
-    ![Figure 1 from the paper]({{site.baseurl}}/assets/images/alpha-go-fig1.png)
+Several years ago, I stated my opinion that the legal profession is essentially obsolete, belonging to a time when many people could not read and write, and access to legal information such as cases and legislation was limited to a few. A senior lawyer once described an ideal application for law firms was a program that would sit in the middle of many documents and would able to identify patterns and trends among them. That is rather what GPT does. In fact, a good deal of it involves looking up information from different documents, something which GPT is likely to be very good at doing. So, it is not surprising to me that GPT-4 has managed to get in the top 10 percentile for a bar exam.
 
-    
-    To be continued.
+### Openness
+
+It is interesting that OpenAI is becoming increasingly more closed. Whilst weights for not shared for earlier models like GPT-3 and DALL-E, on this occasion they are not sharing any details about the model or training:
+
+“Given both the competitive landscape and the safety implications of large-scale models like GPT-4, this report contains no further details about the architecture (including model size), hardware, training compute, dataset construction, training method, or similar.”
+
+Note that that competition is highlighted not only safety. 
+
+But it is very evident that by using ChatGPT you help them a lot. The paper states that they made use of the user inputs to improve the model. 
+
+## 44. LLaMA: Open and Efficient Foundation Language Models ([link](https://arxiv.org/abs/2302.13971))
+
+It is interesting that many LLMs are trained with very few epochs, sometimes just a single pass over the dataset. The models don’t learn not by re-reading many times but they are likely to encounter the same concepts in different contexts or expressed differently many times, a kind of natural data augmentation. 
+
+The model is optimised for inference. Whilst no closed datasets are needed around 2k GPUs were used for the 65B model so it is hardly replicable. 
+
+The model’s performance in MMLU suggests that the categorisations of the different subjects might not be the best. For example it does almost twice as well on biology compared to physics or chemistry both at college and high school level but all three subjects come under the heading of STEM.
+
+The problem with testing for bias versus producing factually incorrect or dangerous outputs is that it could potentially limit freedom of speech. I am not sure if it is appropriate to group together “bias, toxicity and misinformation”. There is a difference between outputs that are unsafe in the manner of operating hazards or noxious emissions from a physical machine and those which express unpopular but not illegal views. For instance it may be offensive but it is not an offence, in the criminal sense, to write an article that is opposed to immigration from a certain country. 
 
 
+## 45. Visual ChatGPT: Talking, Drawing and Editing with Visual Foundation Models ([link](https://arxiv.org/abs/2303.04671))
 
+The paper deals with an idea which is already becoming quite common among applications which is that you need to find ways of managing interactions with LLMs.
 
+There is a need for bridging technology to handle shortcomings of LLMs e.g. to process inputs and outputs. There have been applications using ChatGPT to tie together API calls. But you could just as well do that for machine learning models and thus expand the range of types of inputs and outputs it can process. 
 
+In this instance ChatGPT is connected to different computer vision models enabling the use of natural language commands to accomplish a wide variety of tasks involving images.
 
+The overall idea is of system design around LLMs, creating a new programming language or a new protocol essentially for dealing with large language models. 
 
+What I am curious about is how long in each case the technology will be needed. How long before the capabilities will be built into the model. For example ChatGPT makes it easier to interact with the model but this is not only an interface but part and parcel of the model itself. Prompts are still important for eliciting the right kind of response but now it is easier and engineering the right kind of prompt is now slightly less important than it used to be.
+
+You can anticipate that it will become part of the language model so you don't have to have all these intermediate steps. You just tell it you want to do this and it will be able by itself to generate all the intermediate steps and to execute them will be able to break up your query into the necessary steps. On its own GPT demonstrates capabilities of determining intermediate steps and with particular regard to VisualChatGPT, in the same week ChatGPT-4 was released which can directly handle visual inputs without the need for additional models. 
+
+## 46. Chain-of-Thought Prompting Elicits Reasoning in Large Language Models ([link](https://arxiv.org/abs/2201.11903))
+
+Chain of Thought prompting (CoT) is a simple technique that improves performance of large language models.
+
+- Regular prompting
+  - Provide examples of inputs and the right otputs
+  - Input, Output, Input -> Output
+- Chain of Thought Prompting
+    - Provide examples of inputs and the right outputs along with intermediate reasoning steps
+    - Input, Reasoning steps, Output, Input -> Reasoning steps, Output
+
+Chain of Thought
+> a coherent set of intermediate reasoning steps that lead to the final answer for a problem
+
+Many other methods focus on improving the input part of the prompt such as giving instructions describing the task. CoT involves augmentation of the model output rather than the input.
+
+Advantages
+- Interpretability
+- Applicable to any task that can be solved via language
+- Can be elicited in any sufficiently large existing LLM using few shot examples
+
+Three key takeaways
+1. Emerges only for models > ~100B parameters - that is only for models of such size does performance improve relative to regular prompting.
+2. Larger performance gains for more complex problems - a case of overfitting maybe if problem is too simple?
+3. For a number of tasks, GPT-3
+175B and PaLM 540B CoT results are competitive with or better than prior state of the art which involved task-specific fine-tuning on a labelled dataset.
+
+Limitations
+- The fact it emulates thought process does not mean that model is actually reasoning
+- Annotating questions with reasoning steps is simple for few-shot learning but could be expensive for fine-tuning
+- No guarantee that model will take the right reasoning path
+- Emergent phenomenon only for sufficiently large models
