--- a/_posts/2023-04-13-2-qubit.md
+++ b/_posts/2023-04-13-2-qubit.md
@@ -17,7 +17,7 @@ categories: rc quantum
 
 ## Introduction
 
-The [one-clean-qubit model](https://en.wikipedia.org/wiki/One_Clean_Qubit) lets you estimate the normalised trace $\mathrm{Tr}(U)/\mathrm{Tr}(I)$ of an $n$-qubit gate $U$ which is a task that for which no known classical poly-time algorithm according to this [problem description](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/courseware/Week3/ps3/?activate_block_id=block-v1%3AMITx%2B8.371.2x%2B2T2018%2Btype%40sequential%2Bblock%40ps3) from [MIT 8.371.2x: Quantum Information Science II, Part 2](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/course/) from the [MIT Open Learning Library](https://openlearning.mit.edu/courses-programs/open-learning-library).
+The [one-clean-qubit model](https://en.wikipedia.org/wiki/One_Clean_Qubit) lets you estimate the normalised trace $\mathrm{Tr}(U)/\mathrm{Tr}(I)$ of an $n$-qubit gate $U$ which is a task for which no known classical poly-time algorithm according to this [problem description](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/courseware/Week3/ps3/?activate_block_id=block-v1%3AMITx%2B8.371.2x%2B2T2018%2Btype%40sequential%2Bblock%40ps3) from [MIT 8.371.2x: Quantum Information Science II, Part 2](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/course/) from the [MIT Open Learning Library](https://openlearning.mit.edu/courses-programs/open-learning-library).
 
 This can be achieved using a circuit of the form
 
@@ -26,7 +26,7 @@ This can be achieved using a circuit of the form
 </p>
 
 which can be expressed as `[H(0), CU(0, 1), H(0)]`
-It can easily be shown that the approach works for arbitrary values of $n$. The assignment problem asks you to implement the circuit for a 2 qubit circuit `V = [U(0), CNOT(0, 1), U(1), CNOT(1, 0)]`
+It can easily be shown that the approach works for arbitrary values of $n$. The assignment problem asks you to implement the circuit for a 2 qubit gate `V = [U(0), CNOT(0, 1), U(1), CNOT(1, 0)]`
 
 <p class='p-img' markdown=1>
 ![Circuit for V]({{site.baseurl}}/assets/V_unitary.png)
