DONE: added 1 paper

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -556,8 +556,7 @@ Advantages
 Three key takeaways
 1. Emerges only for models > ~100B parameters - that is only for models of such size does performance improve relative to regular prompting.
 2. Larger performance gains for more complex problems - a case of overfitting maybe if problem is too simple?
-3. For a number of tasks, GPT-3
-175B and PaLM 540B CoT results are competitive with or better than prior state of the art which involved task-specific fine-tuning on a labelled dataset.
+3. For a number of tasks, GPT-3 175B and PaLM 540B CoT results are competitive with or better than prior state of the art which involved task-specific fine-tuning on a labelled dataset.
 
 Limitations
 - The fact it emulates thought process does not mean that model is actually reasoning
