DONE: added 1 paper

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -563,3 +563,7 @@ Limitations
 - Annotating questions with reasoning steps is simple for few-shot learning but could be expensive for fine-tuning
 - No guarantee that model will take the right reasoning path
 - Emergent phenomenon only for sufficiently large models
+
+## 47. Mastering the Game of Go without Human Knowledge ([link](https://discovery.ucl.ac.uk/id/eprint/10045895/1/agz_unformatted_nature.pdf))
+
+See [here]({{site.baseurl}}{% post_url _posts/2023-06-13-Alpha %})
