DONE: added 1 paper

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -567,3 +567,7 @@ Limitations
 ## 47. Mastering the Game of Go without Human Knowledge ([link](https://discovery.ucl.ac.uk/id/eprint/10045895/1/agz_unformatted_nature.pdf))
 
 See [here]({{site.baseurl}}{% post_url _posts/2023-06-13-Alpha %})
+
+## 48. Thinking Fast and Slow with Deep Learning and Tree Search ([link](https://arxiv.org/abs/1705.08439))
+
+See [here]({{site.baseurl}}{% post_url _posts/2023-08-12-Thinking-Tree %})
