--- a/_posts/2021-04-05-GRU.md
+++ b/_posts/2021-04-05-GRU.md
@@ -5,6 +5,11 @@ date:   2021-04-05 2:01:20 +0000
 categories: rc ai
 ---
 
+<h2> Contents </h2>
+
+* This will become a table of contents (this text will be scrapped).
+{:toc}
+
 ## Introduction
 
 The Gated Recurrent Unit (GRU) comprises a state $\mathbf{h}^{(t-1)}$ and 2 "gates" a reset gate and an update gate. At each timestep the cell takes some input $x$ and uses that along with the existing value of $\mathbf{h}^{(t-1)}$ to update its state. 
