--- a/_posts/2023-04-13-2-qubit.md
+++ b/_posts/2023-04-13-2-qubit.md
@@ -6,18 +6,18 @@ categories: rc quantum
 ---
 <h2> Contents </h2>
 
+* This will become a table of contents (this text will be scrapped).
+{:toc}
+
 <style>
 .p-img{
      text-align: center;
 }
 </style>
 
-* This will become a table of contents (this text will be scrapped).
-{:toc}
-
 ## Introduction
 
-The [one-clean-qubit model](https://en.wikipedia.org/wiki/One_Clean_Qubit) lets you estimate the normalised trace $\mathrm{Tr}(U)/\mathrm{Tr}(I)$ of an $n$-qubit gate $U$ which is a task for which no known classical poly-time algorithm according to this [problem description](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/courseware/Week3/ps3/?activate_block_id=block-v1%3AMITx%2B8.371.2x%2B2T2018%2Btype%40sequential%2Bblock%40ps3) from [MIT 8.371.2x: Quantum Information Science II, Part 2](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/course/) from the [MIT Open Learning Library](https://openlearning.mit.edu/courses-programs/open-learning-library).
+The [one-clean-qubit model](https://en.wikipedia.org/wiki/One_Clean_Qubit) lets you estimate the normalised trace $\mathrm{Tr}(U)/\mathrm{Tr}(I)$ of an $n$-qubit gate $U$ which is a task for which no known classical poly-time algorithm exists according to this [problem description](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/courseware/Week3/ps3/?activate_block_id=block-v1%3AMITx%2B8.371.2x%2B2T2018%2Btype%40sequential%2Bblock%40ps3) from [MIT 8.371.2x: Quantum Information Science II, Part 2](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/course/) from the [MIT Open Learning Library](https://openlearning.mit.edu/courses-programs/open-learning-library).
 
 This can be achieved using a circuit of the form
 
@@ -56,7 +56,7 @@ I & 0 \\
 I & 0 \\
 0 & U_n \end{bmatrix}$$
 
-In this case `V = CNOT(2, 1) x U(2) x CNOT(1, 2) x U(1)` (since gates are applied from left to right in the list, matrix multiplication goes right to left), where U is an arbitrary unitary matrix.
+For the gate `V` in this problem we have `V = CNOT(2, 1) x U(2) x CNOT(1, 2) x U(1)` (since gates are applied from left to right in the list, matrix multiplication goes right to left), where `U` is an arbitrary unitary matrix.
 
 
 
