--- a/_posts/2023-06-09-Alpha.md
+++ b/_posts/2023-06-09-Alpha.md
@@ -5,6 +5,10 @@ date:   2023-06-13 00:00:00 +0000
 categories: paper ai
 ---
 
+<h2> Contents </h2>
+* This will become a table of contents (this text will be scrapped).
+{:toc}
+
 ### Links
 - [Free PDF](https://discovery.ucl.ac.uk/id/eprint/10045895/1/agz_unformatted_nature.pdf)
 - [Nature paper](https://www.nature.com/articles/nature24270)
