--- a/_posts/2023-06-13-Alpha.md
+++ b/_posts/2023-06-13-Alpha.md
@@ -53,7 +53,7 @@ categories: paper ai
 
 #### Page 4 
 
-##### Figure 1: **Self-play reinforcement learning in AlphaGo Zero**
+##### Figure 1: Self-play reinforcement learning in AlphaGo Zero
 
 ![Figure 1 from the paper]({{site.baseurl}}/assets/images/alpha-go-fig1.png)
 
