DONE: added 1 paper

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -571,3 +571,26 @@ See [here]({{site.baseurl}}{% post_url _posts/2023-06-13-Alpha %})
 ## 48. Thinking Fast and Slow with Deep Learning and Tree Search ([link](https://arxiv.org/abs/1705.08439))
 
 See [here]({{site.baseurl}}{% post_url _posts/2023-08-12-Thinking-Tree %})
+
+## 49. PromptChainer: Chaining Large Language Model Prompts through Visual Programming ([link](https://arxiv.org/abs/2203.06566))
+
+PromptChainer is a visual prompt chain development tool. You can build a prompt chain like a graph by connecting together different nodes.
+
+Here are the node types
+- LLM
+    - Generic LLM - node output is LLM output e.g. answer a factual query
+    - LLM classifier - use LLM output to filter or branch outputs .e.g decide if question is relevant or not in context of the application
+- Helper
+    - Evaluation - filter or re-rank LLM outputs based on human-designed criteria e.g. detect toxicity
+    - Processing - built in JS functionality to process LLM output e.g. split into a list
+    - Generic JavaScript - user defined JS functions for cases not covered by built in functionality e.g. format output
+- Communication
+    - Data Input - define input to a chain (text only appeared to be supported at the time the paper was released)
+    - User Action - lets user edit intermediate data points e.g. select the best option out of a number of generated text outputs.
+    - API Call - connects external services to the prompt chain e.g. call YouTube API to get video.
+
+The app also has debugging functionality that is designed to address the challenge of cascading errors. It lets you test the chain in different ways:
+- Unit-testing individual nodes in isolation
+- Run entire chain and log outputs per node
+- Breakpoint debugging whereby you can edit the node output before it is passed to the next node which lets you test downstream nodes independently of upstream nodes.
+
