--- a/_posts/2023-04-13-2-qubit.md
+++ b/_posts/2023-04-13-2-qubit.md
@@ -67,7 +67,7 @@ The question required you to give the circuit to estimate the trace for V, assum
 It would seem you can quite straightforwardly construct 
 
 ```
-CV = [CU(0,1), Toffoli(0, 1, 2) x CU(0, 1), Toffoli(0, 2, 1)]
+CV = [CU(0,1), Toffoli(0, 1, 2), CU(0, 2), Toffoli(0, 2, 1)]
 ``` 
 <p class='p-img' markdown=1>
 ![Circuit 2-qubit controlled-V]({{site.baseurl}}/assets/CV-3qubit.png)
