--- a/_posts/2023-08-14-Fluids.md
+++ b/_posts/2023-08-14-Fluids.md
@@ -78,18 +78,18 @@ categories: engg
 
 The problem is concerned with solutions for the Navier Stokes equations in $\mathbb{R}_3$ for a viscous incompressible fluid. 
 - **incompressible**: $\rho$, the fluid density is constant
-- **viscous**: $\mu$, the fluid viscosity is non-zero and thus $\nu = \mu / \rho > 0$ and $rho$ (where $\rho$ is the fluid density).
+- **viscous**: $\mu$, the fluid viscosity is non-zero and thus $\nu = \mu / \rho > 0$
 
 ## Navier-Stokes equations
 For such a fluid the Navier-Stokes equations are given by
 
-<span markdown=1 id ='eqn1'>$$\frac{\partial u_i}{\partial t} + \sum_{j=1}^n u_j \frac{\partial u_i}{\partial x_j} = \nu \Delta u_i - \frac{\partial p}{\partial x_i} + f_i(x, t) \quad (x \in \mathbb{R}^n, t \geq 0) \quad (1)$$</span>
+<p markdown=1 id ='eqn1'>$$\frac{\partial u_i}{\partial t} + \sum_{j=1}^n u_j \frac{\partial u_i}{\partial x_j} = \nu \Delta u_i - \frac{\partial p}{\partial x_i} + f_i(x, t) \quad (x \in \mathbb{R}^n, t \geq 0) \quad (1)$$</p>
 
-<span markdown=1 id ='eqn2'>$$\text{div} \, u = \sum_{i=1}^n \frac{\partial u_i}{\partial x_i} = 0 \quad (x \in \mathbb{R}^n, t \geq 0) \quad (2)$$</span>
+<p markdown=1 id ='eqn2'>$$\text{div} \, u = \sum_{i=1}^n \frac{\partial u_i}{\partial x_i} = 0 \quad (x \in \mathbb{R}^n, t \geq 0) \quad (2)$$</p>
 
 with initial conditions
 
-<span markdown=1 id ='eqn3'>$$u(x, 0) = u^\circ(x) \quad (x \in \mathbb{R}^n)  \quad (3)$$</span>
+<p markdown=1 id ='eqn3'>$$u(x, 0) = u^\circ(x) \quad (x \in \mathbb{R}^n)  \quad (3)$$</p>
 
 - <a href="#eqn1" markdown=1>Equation 1</a>: Newton's 2nd law for a fluid element subject to the following forces
     - External force $f = \sum_i f_i(x, t)\mathbf{e}_i$ e.g. gravity where $f = -g\mathbf{e}_z$
@@ -110,15 +110,15 @@ The initial velocity $u^\circ(x)$ should satisfy the following inequality
 <span id="eqn4" markdown=1>$$\left\vert\partial_x^{\alpha} u^{\circ}\right\vert \leq C_{\alpha K} (1 + \left\vert x \right\vert)^{-K} \quad \text{on} \ \mathbb{R}^n \quad \text{for any} \ \alpha \ \text{and} \ K \quad (4)$$</span>
 
 What this means:
-- The magnitude of the spatial partial derivative of the $u^\circ$ to any order $\alpha$, $\left\vert\frac{\partial^{\alpha} u^{o}}{\partial x}\right\vert$ should be bounded as $x \rightarrow \infty$.
+- The magnitude of the spatial partial derivative of the $u^\circ$ to any order $\alpha$, $\left\vert\frac{\partial^{\alpha} u^{o}}{\partial x}\right\vert$ should be bounded as  $\lvert x \rvert \rightarrow \infty$.
 - The inequality should hold for any rate of decrease $K$ of the right hand side.
-- The upper bound should decrease as $x$ gets larger.
+- The upper bound should decrease as $\lvert x \rvert$ gets larger.
 
 A similar requirement exists for the spatial and time partial derivatives of the external force $f$
 
  <span id="eqn5" markdown=1>$$\left\vert\partial_x^{\alpha} \partial_t^m f(x, t) \right\vert \leq C_{\alpha m K} (1 + \left\vert x \right\vert + t)^{-K} \quad \text{on} \ \mathbb{R}^n \times [0, \infty) \quad \text{for any} \ \alpha,\ m,\  K \quad \text{(5)}$$</span>
 
-$x$ is a vector in $\mathbb{R}^3$, hence the magnitude $\left\vert x \right\vert$ is used in the inequality. $t$ is a non-negative scalar so its raw value is used. 
+$x$ is a vector in $\mathbb{R}^3$, hence the magnitude $\left\vert x \right\vert$ is used in the two inequalities. $t$ is a non-negative scalar so its raw value is used in the second inequality.
 
 Moreover a solution is accepted as physically reasonable only if it satisfies
 
@@ -128,9 +128,9 @@ What this means:
 - <span class='chatgpt' markdown=1>$p, u$ infinitesimally smooth meaning they are differentiable an infinite number of times over the domain which is $\mathbb{R}^n \times [0, \infty)$</span>
 - <span class='chatgpt' markdown=1>The condition ensures that there are no discontinuities which would lead to numerical problems or physical impossibilities in calculation.</span>
 
-Moreover its kinetic energy must be bounded for all time
+Moreover the kinetic energy must be bounded for all time
 
-<span id="eqn7" markdown=1>$$\int_{\mathbb{R}^n} |u(x, t)|^2 \, dx < C\quad (7)$$</span>
+<span id="eqn7" markdown=1>$$\int_{\mathbb{R}^n} |u(x, t)|^2 \, dx < C\quad \text{for all} \ t\geq 0 \quad (7)$$</span>
 
 ## Existence
 Let $u^\circ(x)$ be an initial velocity vector that satisfies [(4)](#eqn4).
@@ -143,7 +143,7 @@ For the purposes of this task it is assumed that there are no external forces ac
 
 ## Breakdown
 There exist 
-- a smooth and divergence-free initial velocity vector field $u^\circ(x)$ on $\mathbb{R}^3$ that satisfies <a href="#eqn4" markdown=1>Equation 4</a>.
+- a smooth and divergence-free initial velocity vector field $u^\circ(x)$ on $\mathbb{R}^3$ that satisfies [(4)](#eqn4).
 - a smooth externally applied force $f(x, t)$ on $\mathbb{R}^3 \times [0, \infty)$ that satisfies [(5)](#eqn5)
 
 for which you cannot find any velocity and pressure functions $u(x, t)$ and $p(x, t)$ which solve the Navier Stokes equations [(1)](#eqn1), [(2)](#eqn2), [(3)](#eqn3) and satisfy [(6)](#eqn6), [(7)](#eqn7).
@@ -152,7 +152,7 @@ for which you cannot find any velocity and pressure functions $u(x, t)$ and $p(x
 
 There are a couple of variations of these two problems that cover periodic solutions. 
 
-The physical reasonableness conditions for the initial velocity $u^\circ$ and the external force $f$ ([(4)](#eqn4), [(5)](#eqn5)) become spatial periodicity conditions
+The physical reasonableness conditions for the initial velocity $u^\circ$ and the external force $f$ (Equations [4](#eqn4), [5](#eqn5)), become spatial periodicity conditions
 
 <span id="eqn8" markdown=1>
 $$u^\circ\left(x + e_j\right) = u^\circ(x), \quad
@@ -167,17 +167,17 @@ where  $e_j$ represents the unit vector in the direction of the $j$-th dimension
 The equations simply express that the initial velocity $u^\circ$ and the external force $f$ must be the same when you move a unit step $e_j$ in any spatial direction. This means that both $u^\circ$ and $f$ are repeating after each unit step in space, hence they are periodic in all spatial dimensions.
 </span>
 
-and a condition similar to [(5)](#eqn5) but which only requires that $f$ be bounded in time
+There is also a condition similar to [(5)](#eqn5) but which only requires that $f$ be bounded in time
 
  <span id="eqn9" markdown=1>$$\left\vert\partial_x^{\alpha} \partial_t^m f(x, t) \right\vert \leq C_{\alpha m K} (1 + \left\vert t \right\vert)^{-K} \quad \text{on} \ \mathbb{R}^n \times [0, \infty) \quad \text{for any} \ \alpha,\ m,\  K \quad (9)$$</span>
 
 As for the physical reasonable conditions for the solutions $p, u$, [Equation 6](#eqn6) continues to apply (although for some reason the problem statement lists it again and subsequently refers to it as Equation 11). 
 
-However instead of the bounded kinetic energy requirement for the velocity solution $u(x, t)$, [Equation 7](#eqn7), there is a periodicity condition
+However instead of the bounded kinetic energy requirement for the velocity solution $u(x, t)$, ([Equation 7](#eqn7)) there is a periodicity condition
 
 <span id="eqn10" markdown=1>$$u(x, t) = u\left(x + e_j, t\right) \quad \text{on} \ \mathbb{R}^3 \times [0, \infty) \quad \text{for} \  1 \leq j \leq n \quad (10)$$</span>
 
-<span class='chatgpt'>Due to the inherent boundedness in space brought about by periodicity,[Equation 4](#eqn4) becomes unnecessary and unlike [Equation 3](#eqn3), there is no spatial component in [Equation 9](#eqn9). A periodic function repeats its values in regular intervals, assuring that it does not become arbitrarily large in any spatial direction, thereby automatically bounding the magnitude of any spatial derivative. This spatial boundedness negates the need for concern over extreme spatial cases as they will reflect a scenario within the fixed periodic range. However, time, being unbounded and continuously evolving, still needs to be considered as part of [Equation 9](#eqn9).</span>
+<p class='chatgpt' markdown=1>Due to the inherent boundedness in space brought about by periodicity, [Equation 4](#eqn4) becomes unnecessary and unlike [Equation 3](#eqn3), there is no spatial component (i.e. $\lvert x \rvert$) in [Equation 9](#eqn9). A periodic function repeats its values at regular intervals, which means that it does not become arbitrarily large in any spatial direction, thereby automatically bounding the magnitude of any spatial derivative. This spatial boundedness negates the need for concern over extreme spatial cases. However, time, being unbounded and continuously evolving, needs to be considered as part of [Equation 9](#eqn9).</p>
 
 Not entirely sure though why $\lvert t \rvert$ rather than $t$ in [Equation 9](#eqn9) given that the Navier Stokes equations apply only for $t \geq 0$. Here is what ChatGPT had to say:
 
