added new fluids post;

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -566,11 +566,11 @@ Limitations
 
 ## 47. Mastering the Game of Go without Human Knowledge ([link](https://discovery.ucl.ac.uk/id/eprint/10045895/1/agz_unformatted_nature.pdf))
 
-See [here]({{site.baseurl}}{% post_url _posts/2023-06-13-Alpha %})
+See [here]({{site.baseurl}}{% post_url 2023-06-13-Alpha %})
 
 ## 48. Thinking Fast and Slow with Deep Learning and Tree Search ([link](https://arxiv.org/abs/1705.08439))
 
-See [here]({{site.baseurl}}{% post_url _posts/2023-08-12-Thinking-Tree %})
+See [here]({{site.baseurl}}{% post_url 2023-08-12-Thinking-Tree %})
 
 ## 49. PromptChainer: Chaining Large Language Model Prompts through Visual Programming ([link](https://arxiv.org/abs/2203.06566))
 
@@ -594,3 +594,13 @@ The app also has debugging functionality that is designed to address the challen
 - Run entire chain and log outputs per node
 - Breakpoint debugging whereby you can edit the node output before it is passed to the next node which lets you test downstream nodes independently of upstream nodes.
 
+## 50. STaR: Self-Taught Reasoner Bootstrapping Reasoning With Reasoning ([link](TODO))
+
+### Rationale generation
+- Initial question-answer dataset $(x_i, y_i)$ plus small prompt dataset with *rationales* $(x_z, r_z, y_z)$.
+- Feed in few-shot prompt of the form $x_1, r_1, y_1, x_2, r_2, y_2$ concatenate with datapoint from initial dataset $x_i, y_i$.
+- Encourages model to produce reasoning steps $r_n$ before arriving at the answer $y_n$.
+- Filter to keep those datapoints that were correctly predicted and augment dataset with predicted reasoning steps $\hat{r}_i$.
+- Finetune original model (to avoid overfitting) on augmented dataset and then use this model to generate rationales once again (using all the datapoints this from the initial dataset).
+
+### Rationalization
