--- a/_posts/2023-08-14-Fluids.md
+++ b/_posts/2023-08-14-Fluids.md
@@ -1,73 +1,9 @@
 ---
 layout: post
-title:  "IMOW: The Navier Stokes Millennium Prize Problem Statement"
+title:  "IMOW: The Navier Stokes Millennium Prize Problem - Statement"
 date:   2023-09-04 00:00:00 +0000
 categories: engg
 ---
-<script>
-    window.onload = function(){
-        let chatgptSpans = Array.from(document.querySelectorAll('.chatgpt'))
-        let btn = document.querySelector('button')
-        var togglBtn= function(){
-            if (window.scrollY >= 50) {
-              btn.style.display = "block";
-            } else {
-              btn.style.display = "none";
-            }
-          }
-
-        window.addEventListener('scroll', togglBtn)
-
-        btn.addEventListener('click',
-        function (e){
-            let currentlyShown = btn.classList.contains('shown');
-            if(currentlyShown){
-                btn.classList.remove('shown');
-                btn.classList.add('hidden');
-                btn.innerText = btn.innerText.replace('Hide', 'Show');
-            } else {
-                btn.classList.remove('hidden');
-                btn.classList.add('shown');
-                btn.innerText = btn.innerText.replace('Show', 'Hide');
-            }
-            chatgptSpans.forEach((x)=>{
-                if(currentlyShown){
-                    x.classList.remove('chatgpt-active');
-                }
-                else{
-                    x.classList.add('chatgpt-active');
-                }
-
-            })
-
-        })
-    }
-</script>
-
-<style>
-    button{
-        position: fixed;
-        right: 0;
-        top:0;
-        background: #2a7ae2;
-        opacity: 0.8;
-        padding: 10px;
-        border:None;
-        font-size: large;
-        color:white;
-        cursor: pointer;
-        display: none;
-
-    }
-    button:hover{
-        opacity: 0.9;
-    }
-    .chatgpt-active{
-        background-color:#ffff0096;
-    }
-</style>
-
-<button class='hidden'>Show AI-Assisted</button>
 
 <h2> Contents </h2>
 
@@ -100,6 +36,7 @@ with initial conditions
 
 <span class='chatgpt' markdown=1>In this context, $C^\infty$ refers to a differentiable function whose derivatives of all orders exist and are continuous. $C^\infty$ is also often referred to as a smooth function.</span>
 
+The Euler equations are the NS-equations $(1), (2), (3)$ for an inviscid fluid i.e. $\mu = 0 \implies \nu = 0$. 
 
 ## Physical reasonableness
 
@@ -132,7 +69,7 @@ Moreover the kinetic energy must be bounded for all time
 
 <span id="eqn7" markdown=1>$$\int_{\mathbb{R}^n} |u(x, t)|^2 \, dx < C\quad \text{for all} \ t\geq 0 \quad (7)$$</span>
 
-## Existence
+## Existence (Statement A of the paper)
 Let $u^\circ(x)$ be an initial velocity vector that satisfies [(4)](#eqn4).
 
 The task is to prove that there exists a velocity function $u(x, t)$ and a pressure function $p(x, t)$ which solve the Navier Stokes equations [(1)](#eqn1), [(2)](#eqn2), [(3)](#eqn3) and satisfy [(6)](#eqn6), [(7)](#eqn7)
@@ -141,16 +78,16 @@ For the purposes of this task it is assumed that there are no external forces ac
 
 <span class='chatgpt' markdown=1>This is in order to focus on intrinsic fluid behavior derived from its pressure and velocity in response to initial conditions, without the overcomplications of additional external forces.</span>
 
-## Breakdown
+## Breakdown (Statement C of the paper)
 There exist 
 - a smooth and divergence-free initial velocity vector field $u^\circ(x)$ on $\mathbb{R}^3$ that satisfies [(4)](#eqn4).
 - a smooth externally applied force $f(x, t)$ on $\mathbb{R}^3 \times [0, \infty)$ that satisfies [(5)](#eqn5)
 
 for which you cannot find any velocity and pressure functions $u(x, t)$ and $p(x, t)$ which solve the Navier Stokes equations [(1)](#eqn1), [(2)](#eqn2), [(3)](#eqn3) and satisfy [(6)](#eqn6), [(7)](#eqn7).
 
-## Periodic solutions
+## Periodic solutions (Statements B, D of the paper)
 
-There are a couple of variations of these two problems that cover periodic solutions. 
+There are a couple of variations of these two problems that cover existence (statement B) and breakdown (statement D) with periodic solutions. 
 
 The physical reasonableness conditions for the initial velocity $u^\circ$ and the external force $f$ (Equations [4](#eqn4), [5](#eqn5)), become spatial periodicity conditions
 
