--- a/_posts/2023-04-13-2-qubit.md
+++ b/_posts/2023-04-13-2-qubit.md
@@ -17,7 +17,7 @@ categories: rc quantum
 
 ## Introduction
 
-The [one-clean-qubit model](https://en.wikipedia.org/wiki/One_Clean_Qubit) lets you estimate the normalised trace $\mathrm{Tr}(U)/\mathrm{Tr}(I)$ of an $n$-qubit gate $U$ which is a task for which no known classical poly-time algorithm exists according to this [problem description](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/courseware/Week3/ps3/?activate_block_id=block-v1%3AMITx%2B8.371.2x%2B2T2018%2Btype%40sequential%2Bblock%40ps3) from [MIT 8.371.2x: Quantum Information Science II, Part 2](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/course/) from the [MIT Open Learning Library](https://openlearning.mit.edu/courses-programs/open-learning-library).
+The [one-clean-qubit model](https://en.wikipedia.org/wiki/One_Clean_Qubit) lets you estimate the normalised trace $\mathrm{Tr}(U)/\mathrm{Tr}(I)$ of an $n$-qubit gate $U$ which is a task for which no known classical poly-time algorithm exists according to this [problem description](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/courseware/Week3/ps3/?activate_block_id=block-v1%3AMITx%2B8.371.2x%2B2T2018%2Btype%40sequential%2Bblock%40ps3) from [MIT 8.371.2x: Quantum Information Science II, Part 2](https://openlearninglibrary.mit.edu/courses/course-v1:MITx+8.371.2x+2T2018/about) from the [MIT Open Learning Library](https://openlearning.mit.edu/courses-programs/open-learning-library).
 
 This can be achieved using a circuit of the form
 
@@ -98,7 +98,7 @@ I learned that it is possible to construct `Toffoli` as well as other 3-qubit ga
 
 ![Circuit diagram of Toffoli gate built using only 2 qubit gates]({{site.baseurl}}/assets/toffoli.png)
 
-<small>Source: [Wikipedia](https://en.wikipedia.org/wiki/Controlled_NOT_gate#/media/File:CNOT_Hadamard_Basis.svg), created by Geek3 ([CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/))</small>
+<small>Source: [Wikipedia](https://commons.wikimedia.org/wiki/File:Qcircuit_ToffolifromCNOT.svg), created by Geek3 ([CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/))</small>
 
 However when I input this sequence in place of Toffoli, the grader failed to return a response of correct or not. It might have been a timeout in the backend maybe because of the large number of gates involved. It returned the following error
 
