--- a/_posts/2023-08-14-Fluids.md
+++ b/_posts/2023-08-14-Fluids.md
@@ -129,3 +129,8 @@ The statements are virtually identical except for the equations to be satisfied 
 - Initial condition $u^\circ(x)$ must satisfy [(8)](#eqn8) instead of [(4)](#eqn8). 
 - External force (non-zero for breakdown only) must satisfy [(9)](#eqn8) instead of [(5)](#eqn8).
 - Solutions $u(x, t), p(x, t)$ must satisfy [(10)](#eqn10) instead of [(7)](#eqn7).
+
+
+## References
+- [Clay Mathematics institute Problem Introduction](https://www.claymath.org/millennium/navier-stokes-equation)
+- [Official Problem Description by Charles L. Fefferman](https://www.claymath.org/wp-content/uploads/2022/06/navierstokes.pdf)
